--- a/demo/postAdd.html
+++ b/demo/postAdd.html
@@ -41,6 +41,6 @@
     </div>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/blog.js"></script>
+    <script type="text/javascript" src="assets/postAdd.js"></script>
 </body>
 </html>
